myteo/test/analyze/type_check/logical_operation.myte
module Test

fun main() {
  (true && false: bool);
  (true || false: bool);

  (1 && false: bool);
  (false && 1: bool);
  (() && "a": bool);
}